<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/todo_profile_item"
        android:title="@string/profile"
        app:showAsAction="never"
        />
    <item android:id="@+id/todo_notice_item"
        android:title="@string/notice_board"
        app:showAsAction="never"
        />
    <item android:id="@+id/todo_attendance_item"
        android:title="@string/attendent"
        app:showAsAction="never"
        />
    <item android:id="@+id/todo_leaveday_item"
        android:title="@string/leave_days"
        app:showAsAction="never"
        />
    <item android:id="@+id/todo_holyday_item"
        android:title="@string/holi_days"
        app:showAsAction="never"
        />
</menu>