<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/holiday_profile_item"
        android:title="@string/profile"
        app:showAsAction="never"
        />
    <item android:id="@+id/holiday_todo_item"
        android:title="@string/todo"
        app:showAsAction="never"
        />

    <item android:id="@+id/holiday_attendance_item"
        android:title="@string/attendent"
        app:showAsAction="never"
        />
    <item android:id="@+id/holiday_notice_item"
        android:title="@string/notice_board"
        app:showAsAction="never"
        />
    <item android:id="@+id/holiday_leaveday_item"
        android:title="@string/leave_days"
        app:showAsAction="never"
        />

</menu>