<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/profile_todo_item"
        android:title="@string/todo"
        app:showAsAction="never"
        />

    <item android:id="@+id/profile_attendance_item"
        android:title="@string/attendent"
        app:showAsAction="never"
        />
    <item android:id="@+id/profile_notice_item"
        android:title="@string/notice_board"
        app:showAsAction="never"
        />
    <item android:id="@+id/profile_leaveday_item"
        android:title="@string/leave_days"
        app:showAsAction="never"
        />

    <item android:id="@+id/profile_holiday_item"
        android:title="@string/holi_days"
        app:showAsAction="never"
        />

</menu>