<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Todo">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <include layout="@layout/toolbar"
            android:id="@+id/todo_toolbar"/>

        <RelativeLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/todo_toolbar">

            <TextView
                android:id="@+id/nb_tasks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nb_tasks"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/menu_list"
                android:onClick="settings"
                android:paddingLeft="10dp"
                android:src="@drawable/menu"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/top">

            <ListView
                android:id="@+id/listView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:id="@+id/add_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:onClick="add"
                android:src="@drawable/plus" />
        </RelativeLayout>
    </RelativeLayout>

        <LinearLayout
            android:id="@+id/left_drawer"
            android:layout_width="200dp"
            android:layout_height="fill_parent"
            android:layout_gravity="start|left"
            android:background="#FFFFFF"
            android:fillViewport="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/top2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:onClick="closeMenu"
                    android:padding="10dp"
                    android:src="@drawable/close"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <LinearLayout
                android:background="#EFEFEF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:paddingStart="2dp">

                <ImageView
                    android:id="@+id/doneT"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/donetask" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:padding="10dp"
                    android:text="@string/status"
                    android:textSize="20sp" />

            </LinearLayout>



            <CheckBox
                android:id="@+id/switch_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done" />

            <CheckBox
                android:id="@+id/switch_todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_do" />



            <LinearLayout
                android:background="#EFEFEF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:paddingStart="2dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_date_range_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:padding="10dp"
                    android:text="@string/date"
                    android:textSize="20sp" />

            </LinearLayout>


            <CheckBox
                android:id="@+id/switch_passed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passed" />

            <CheckBox
                android:id="@+id/switch_ondate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/up_to_date" />
            <LinearLayout
                android:background="#EFEFEF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addCategorie"
                    android:padding="10dp"
                    android:text="@string/categories"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:onClick="addCategorie"
                    android:src="@drawable/config" />
            </LinearLayout>



            <ListView
                android:id="@+id/checkCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">


            </ListView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DFDFDF" />
        </LinearLayout>

</android.support.v4.widget.DrawerLayout>