<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="#B64D57"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/are_you_sure_you_want_to_delete_that_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/yes"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_width="70dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_dark"
                android:textColor="@android:color/white"
                android:text="@string/yes" />

            <TextView
                android:textStyle="bold"
                android:padding="10dp"
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:text="@string/cancel" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>