<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/color"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="#AAAAAA"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/catName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/ok"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_green_dark"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok" />

            <TextView
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_dark"
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>