<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_atendence"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GiveAttendance">
    <LinearLayout
        android:id="@+id/date_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/black">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:src="@drawable/clock"/>
        <TextView
            android:id="@+id/current_date"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/date"

            android:textColor="@android:color/darker_gray"
            android:background="@android:color/black"
            android:textSize="20sp"
             />

        <ImageButton
            android:id="@+id/cancel_att_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/holo_red_dark"
            android:src="@drawable/cancel"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/date_view"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_time"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
        <TextView
            android:id="@+id/show_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/current_time"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="50dp" />
        <TextView
            android:id="@+id/edit_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:hint="@string/edit_time"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="50dp" />

        <TextView
            android:id="@+id/duty_end_time_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="50dp" />
        <Button
            android:id="@+id/submit_attendance"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20sp"
            android:text="@string/done"
            android:background="@color/green"/>
    </LinearLayout>
</RelativeLayout>