<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Attendance">

    <include layout="@layout/toolbar"
        android:id="@+id/attendance_toolbar"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_below="@id/attendance_toolbar"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/attendance_div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/darker_gray" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance_current_time"
                    android:textAlignment="center"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:elevation="4dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/darker_gray" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/darker_gray" />
                <LinearLayout
                    android:id="@+id/showTimeAndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/clock"/>
                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="end"
                        />
                    <TextView
                        android:id="@+id/time"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:ems="10"
                        android:gravity="end"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:elevation="4dp"
                    android:background="@android:color/darker_gray" />

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/att_signin"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:elevation="4dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/attendance_div">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/sign_in"
                        android:layout_margin="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:elevation="3dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:background="@android:color/darker_gray" />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/calender_image"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:elevation="2dp"
                        android:layout_marginBottom="10dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/status_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:hint="@string/current_state"
                        android:textAlignment="center"
                        android:layout_marginBottom="10dp"
                        android:textSize="20sp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:elevation="2dp"
                        android:layout_marginBottom="10dp"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/att_signout"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:elevation="4dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/att_signin"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/sign_out"
                        android:layout_margin="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:elevation="2dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:background="@android:color/darker_gray" />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/calender_image"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:elevation="2dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/darker_gray" />
                    <TextView
                        android:id="@+id/status_signout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:hint="@string/current_state"
                        android:textAlignment="center"
                        android:layout_margin="10dp"
                        android:textSize="20sp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:elevation="2dp"
                        android:layout_marginBottom="10dp"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </RelativeLayout>


    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>